fix: width code block and overflow adjusted

--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,6 @@ code {
   padding: 3px;
   border-radius: 2px;
   border: 1px solid black;
+  max-width: 100%;
+  overflow: auto;
 }
